--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "enzyme-adapter-react-16": "^1.11.2",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
