--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/node": "^11.13.0",
     "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1"
   }
